[metadata]
name = napari-imsmicrolink
author = Nathan Heath Patterson
author_email = heath.patterson@vanderbilt.edu
license = MIT
url = https://github.com/nhpatterson/napari-imsmicrolink
description = Plugin to perform IMS to microscopy registration using laser ablation marks.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License
project_urls = 
	Bug Tracker = https://github.com/nhpatterson/napari-imsmicrolink/issues
	Documentation = https://github.com/nhpatterson/napari-imsmicrolink#README.md
	Source Code = https://github.com/nhpatterson/napari-imsmicrolink
	User Support = https://github.com/nhpatterson/napari-imsmicrolink/issues

[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src
# add your package requirements here
install_requires = 
	numpy>=2.1.0,<3
	tifffile==2024.12.12
	dask
	zarr>=2.15.0,<3
	qtpy>=2.4.2,<3
	bioformats_jar
	SimpleITK>=2.3.1,<3
	pandas>=2.2.3,<3
	h5py>=3.12.1,<4
	opencv-python>=4.10.0.84,<5
	czifile
	imagecodecs
	napari[all]==0.5.5
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	napari-imsmicrolink = napari_imsmicrolink:napari.yaml

[options.package_data]
napari_imsmicrolink = napari.yaml

